api-runner/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-runner-svc
spec:
  selector:
    app: api-runner
  ports:
    - name: http
      port: 80
      targetPort: 8787
  type: ClusterIP
