api-runner/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-runner-ingress
spec:
  rules:
    - host: api-runner.yourdomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-runner-svc
                port:
                  number: 80
